--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -8,17 +8,16 @@
 
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a href="#product-tab" class="nav-link active" data-toggle="tab" >
+          <a href="#product-tab" class="nav-link active" data-toggle="tab" style="background-color:#99CCFF;">
             さくひん
           </a>
         </li>
         <li class="nav-item">
-          <a href="#pref-tab" class="nav-link" data-toggle="tab" >
+          <a href="#pref-tab" class="nav-link" data-toggle="tab" style="background-color:#99CCFF;">
             ちいき
           </a>
         </li>
       </ul>
-
       <div class="tab-content">
         <!-- 作品検索フォーム -->
         <div id="product-tab" class="tab-pane active">
