--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -7,21 +7,34 @@
       <%= image_tag(data.images[0].url, class: "img-thumbnail", size: 100) if data.images? %>
     <% end %>
     </a>
-    <div class="media-body">
-      <h4 class="media-heading">
-        <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
-      </h4>
-      <%= data.details %>
-    </div>
-    <div>
-      <%= render 'rate/rate' , detail: data %>
-    </div>
-    <div>
-      <span class="timestamp">
-        <%= time_ago_in_words(data.updated_at) %>前
-      </span>
-    </div>
-  </div>
+    
+    <div class="card my-3" style="background-color:white;">
+      <div class="card-header">
+     
+        <!-- <div class="media-body"> -->
+          <h4> <!-- class="media-heading" -->
+          <%= link_to data.spot_name ,search_detail_path(spot_id: data.id) %>
+          </h4>
+      
+          <%= data.details %>
+          </div>
+          </div>
+        <!--</div>-->
+        <div class="card-body">  
+        <div>
+          <%= render 'rate/rate' , detail: data %>
+        </div>
+      </div>
+      <div class="card-footer">
+        <!-- <div> -->
+          <span class="timestamp"> 
+            <%= time_ago_in_words(data.updated_at) %>前
+          </span>
+        <!-- </div> -->
+      </div>
+     </div>   
+     
+    
   <br>
   <br>
 
