[Change] Home画面に検索フォームを追加

--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -13,4 +13,6 @@
     <%= link_to "さくれのめんばーになる", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
   
+  <%= render('search/search') %>
+  
 <% end %>
