--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -1,8 +1,16 @@
 <header class="navbar navbar-light navbar-expand-lg navbar-fixed-top navbar-inverse" style="background-color:#FFCCCC;">
   <div class="container navbar-dark" style="background-color:FFFFCC;"><!-- CC9966 -->
-    <nav>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <%= link_to image_tag("icon/さくれロゴメイリオ4.png", :size => "112x50"), root_url %>
-      <ul class="nav navbar-nav navbar-right" >
+    </div>        
+    <nav>
+      <ul id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
 
         <% if logged_in? %>
           <li class="dropdown">
