[Change] コメント追加

--- a/web_rails/myapp/app/views/search/_search.html.erb
+++ b/web_rails/myapp/app/views/search/_search.html.erb
@@ -1,6 +1,6 @@
 <!--西田：　重複コードたくさんあるので後できれいにするかも-->
 <% provide(:title, "けんさく") %>
-<h1>けんさくするよ</h1>
+<h1>かんこうち　けんさく</h1>
 
 <div class=”container-fluid”>
   <div class="row">
