[add]いいね機能　おajax追加

--- a/web_rails/myapp/app/views/favorite/_favorite.html.erb
+++ b/web_rails/myapp/app/views/favorite/_favorite.html.erb
@@ -1,9 +1,11 @@
+<div class="like-link" id="fav-link-<%= detail.id %>">
 <% if !Favorite.exists?(user_id:current_user.id,spot_id:detail.id) %>
-    <%= link_to fav_path(detail.id) , method: :post , class:"btn btn-default btn-lg"  do %>
+    <%= button_to fav_path(detail.id) , method: :post , class:"btn btn-default btn-lg" , remote: true do %>
         <i class="glyphicon glyphicon-star-empty"></i>
     <% end %>
 <% else %>
-    <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-default btn-lg"  do %>
+    <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-default btn-lg" , remote: true do %>
         <i class="glyphicon glyphicon-star"></i>
     <% end %>
 <% end %>
+</div>
