--- a/web_rails/myapp/app/views/rate/_rate.html.erb
+++ b/web_rails/myapp/app/views/rate/_rate.html.erb
@@ -1,17 +1,19 @@
 <% if current_user %>
+<div class="like-link" id="like-link-<%= detail.id %>">
     <% if !Rating.exists?(user_id:current_user.id,spot_id:detail.id) %>
-        <%= link_to rate_path(detail.id) , method: :post , class:"btn btn-default"  do %>
+        <%= link_to rate_path(detail.id) , method: :post , class:"btn btn-default" , remote: true do %>
             <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
             <%= detail.rate %>
             </span>
         <% end %>
     <% else %>
-        <%= link_to unrate_path(detail.id),method: :delete , class:"btn btn-default"  do %>
+        <%= link_to unrate_path(detail.id),method: :delete , class:"btn btn-default" , remote: true do %>
             <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
             <%= detail.rate %>
             </span>
         <% end %>
     <% end %>
+</div>
 <% else %>
     <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
     <%= detail.rate %>
