--- a/web_rails/myapp/app/assets/stylesheets/rate.scss
+++ b/web_rails/myapp/app/assets/stylesheets/rate.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the rate controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.like-link{
+    float: left;
+}
