--- a/web_rails/myapp/app/views/favorite/_favorite.html.erb
+++ b/web_rails/myapp/app/views/favorite/_favorite.html.erb
@@ -1,11 +1,17 @@
-<div class="like-link" id="fav-link-<%= detail.id %>">
-<% if !Favorite.exists?(user_id:current_user.id,spot_id:detail.id) %>
-    <%= button_to fav_path(detail.id) , method: :post , class:"btn btn-default btn-lg" , remote: true do %>
-        <i class="glyphicon glyphicon-star-empty"></i>
+<% if current_user %>
+    <div class="fav-link" id="fav-link-<%= detail.id %>">
+    <% if !Favorite.exists?(user_id:current_user.id,spot_id:detail.id) %>
+        <%= link_to fav_path(detail.id) , method: :post , class:"btn btn-link btn-lg" , remote: true do %>
+            <i class="glyphicon glyphicon-check">リストに追加</i>
+        <% end %>
+    <% else %>
+        <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-link btn-lg" , remote: true do %>
+            <i class="glyphicon glyphicon-new-window">リストから外す</i>
+        <% end %>
     <% end %>
+    </div>
 <% else %>
-    <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-default btn-lg" , remote: true do %>
-        <i class="glyphicon glyphicon-star"></i>
+    <%= link_to "#", class:"btn btn-link btn-lg disabled" , remote: true do %>
+        <i class="glyphicon glyphicon-new-window">リストに追加</i>
     <% end %>
 <% end %>
-</div>
