--- a/web_rails/myapp/app/views/rate/_rate.html.erb
+++ b/web_rails/myapp/app/views/rate/_rate.html.erb
@@ -1,20 +1,17 @@
 <% if current_user %>
 <div class="like-link" id="like-link-<%= detail.id %>">
     <% if !Rating.exists?(user_id:current_user.id,spot_id:detail.id) %>
-        <%= link_to rate_path(detail.id) , method: :post , class:"btn btn-default" , remote: true do %>
-            <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
-            <%= detail.rate %>
-            </span>
+        <%= link_to rate_path(spot_id:detail.id) , method: :post , class:"btn btn-link btn-lg" , remote: true do %>
+            <i class="glyphicon glyphicon-heart-empty" ><%= detail.rate %></i>
         <% end %>
     <% else %>
-        <%= link_to unrate_path(detail.id),method: :delete , class:"btn btn-default" , remote: true do %>
-            <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-            <%= detail.rate %>
-            </span>
+        <%= link_to unrate_path(spot_id:detail.id),method: :delete , class:"btn btn-link btn-lg" , remote: true do %>
+            <i class="glyphicon glyphicon-heart" ><%= detail.rate %></i>
         <% end %>
     <% end %>
 </div>
 <% else %>
-    <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
-    <%= detail.rate %>
+    <%= link_to "#", class:"btn btn-link btn-lg disabled" , remote: true do %>
+        <i class="glyphicon glyphicon-heart"><%= detail.rate %></i>
+    <% end %>
 <% end %>
