[Add] 下書き保存 & 公開の設定を追加

--- a/web_rails/myapp/app/views/spot/create_s.html.erb
+++ b/web_rails/myapp/app/views/spot/create_s.html.erb
@@ -15,7 +15,7 @@
         <td><%= f.text_field :spot_name, class: 'form-control' %><td>
       </tr>
       <tr>
-        <th>作品詳細<span class="text-danger">（必須）</span></th>
+        <th>スポットの詳細<span class="text-danger">（必須）</span></th>
         <td><%= f.text_area :details, class: 'form-control' %></td>
       </tr>
       <tr>
