--- a/web_rails/myapp/app/views/search/_time_line.html.erb
+++ b/web_rails/myapp/app/views/search/_time_line.html.erb
@@ -22,6 +22,7 @@
         <!--</div>-->
         <div class="card-body">  
         <div>
+          <%= render 'favorite/favorite' , detail: data%>
           <%= render 'rate/rate' , detail: data %>
         </div>
       </div>
