--- a/web_rails/myapp/app/views/search/search_result.html.erb
+++ b/web_rails/myapp/app/views/search/search_result.html.erb
@@ -24,6 +24,7 @@
       <%= spot.details %>
     </div>
     <div>
+      <%= render 'favorite/favorite' , detail: spot%>
       <%= render 'rate/rate' , detail: spot %>
     </div>
   </div>
