--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -27,7 +27,7 @@ ul.ui-autocomplete {
 
 #inline-button{
   display: inline-block
-=======
+}
 .panel.with-nav-tabs .panel-heading{
   padding: 5px 5px 0 5px;
 	background-color: #333333;
