--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -15,39 +15,40 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle text-danger" data-toggle="dropdown">
-               かんこうち<b class="caret"></b>
+               Tourist Spot <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "とうろく", add_spot_path %></li>
-              <li><%= link_to "さがす"  ,   search_path %></li>
+              <li><%= link_to "Add", add_spot_path %></li>
+              <li><%= link_to "Look for"  ,   search_path %></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              けいかくひょう <b class="caret"></b>
+              Planning <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "つくる", planning_index_path %></li>
-              <li><%= link_to "みる", planning_show_path %></li>
+              <li><%= link_to "Make", planning_index_path %></li>
+              <li><%= link_to "Show", planning_show_path %></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              あかうんと <b class="caret"></b>
+              Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "ぷろふぃーる", current_user %></li>
-              <li><%= link_to "せってい", edit_user_path(current_user) %></li>
-              <li><%= link_to "おきにいり", fav_show_path(user_id:current_user) %></li>
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Config", edit_user_path(current_user) %></li>
+              <li><%= link_to "Favorite", fav_show_path(user_id:current_user) %></li>
+              <li><%= link_to "Spot Edit", show_spot_path(user_id:current_user) %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "ろぐあうと", logout_path, method: "delete" %>
+                <%= link_to "Logout", logout_path, method: "delete" %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "さくれのメンバーになる", signup_path %></li>
-          <li><%= link_to "ろぐいん", login_path %></li>
+          <li><%= link_to "Sign up", signup_path %></li>
+          <li><%= link_to "Login", login_path %></li>
         <% end %>
       </ul>
     </nav>
