--- a/web_rails/myapp/app/views/spot/edit.html.erb
+++ b/web_rails/myapp/app/views/spot/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '観光地登録') %>
+<% provide(:title, '観光地詳細編集') %>
 <h1>スポット情報編集</h1>
 
 <div class="row">
@@ -10,16 +10,16 @@
 
       <div class="btn-group" data-toggle="buttons">
         <label class="btn btn-default active">
-          下書き保存する<%= f.radio_button :review_flag, {:checked => true } %>
+          下書き<%= f.radio_button :review_flag, {:checked => true } %>
         </label>
         <label class="btn btn-default">
-          公開する<%= f.radio_button :review_flag, false %>
+          公開<%= f.radio_button :review_flag, false %>
         </label>
       </div>
 
       <br>
       <div class="btn-group">
-        <%= f.submit "観光地を登録する", class: "btn btn-primary" %>
+        <%= f.submit "保存する", class: "btn btn-primary" %>
       </div>
     
     <% end %>
