--- a/web_rails/myapp/app/views/users/edit.html.erb
+++ b/web_rails/myapp/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "ゆーざーへんしゅう") %>
-<h1>ぷろふぃーる　へんしゅう</h1>
+<% provide(:title, "Profile Edit") %>
+<h1>Profile Edit</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -14,28 +14,28 @@
         　<% end %>
         </tr>
         <tr>
-          <th>あいこん　へんこう</th>
+          <th>Change Icon</th>
           <td><%= f.file_field :image_name %></td>
         </tr>
         <tr>
-          <th>ゆーざーねーむ</th>
+          <th>User Name</th>
           <td><%= f.text_field :user_name, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>めーるあどれす</th>
+          <th>Mail Address</th>
           <td><%= f.email_field :email, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>ぱすわーど</th>
+          <th>Password</th>
           <td><%= f.password_field :password, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>さいにゅうりょく</th>
+          <th>Re-entry</th>
           <td><%= f.password_field :password_confirmation, class: 'form-control' %><td>
         </tr>
       </table>
 
-      <%= f.submit :こうしんする, class: "btn btn-primary" %>
+      <%= f.submit :"Update", class: "btn btn-primary" %>
     <% end %>
 
   </div>
