--- a/web_rails/myapp/app/views/users/new.html.erb
+++ b/web_rails/myapp/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'ゆーざー　さくせい') %>
+<% provide(:title, 'Make User') %>
 <h1>アカウント登録</h1>
 
 <div class="row">
@@ -8,25 +8,25 @@
       
       <table class="table">
         <tr>
-          <th>ゆーざーねーむ<span class="text-danger">（必須）</span></th>
+          <th>User Name<span class="text-danger">（必須）</span></th>
           <td><%= f.text_field :user_name, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>めーるあどれす<span class="text-danger">（必須）</span></th>
+          <th>Mail Address<span class="text-danger">（必須）</span></th>
           <td><%= f.email_field :email, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>ぱすわーど<span class="text-danger">（必須）</span></th>
+          <th>Password<span class="text-danger">（必須）</span></th>
           <td><%= f.password_field :password, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>さいにゅうりょく<span class="text-danger">（必須）</span></th>
+          <th>Re-enter<span class="text-danger">（必須）</span></th>
           <td><%= f.password_field :password_confirmation, class: 'form-control' %></td>
         </tr>
 
       </table>
 
-      <%= f.submit :ゆーざーをつくる, class: "btn btn-primary" %>
+      <%= f.submit :"Make User", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
