[Change] 担当箇所の日本語表記を変更

--- a/web_rails/myapp/app/views/spot/new.html.erb
+++ b/web_rails/myapp/app/views/spot/new.html.erb
@@ -6,11 +6,11 @@
     <%= form_for(@product) do |f| %>
       <table class="table">
         <tr>
-          <th>さくひんのなまえ</th>
+          <th>作品名</th>
           <td><%= f.text_field :product_name, class: 'form-control' %></td>
         </tr>
         <tr>
-          <th>さくひんのじゃんる</th>
+          <th>ジャンル</th>
           <td><%= f.collection_select(:genre_id, Genre.all, :id, :genre_name, {prompt: "選択してください", class: 'form-control'}) %></td>
         </tr>
       </table>
