--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -61,7 +61,7 @@
       「さくれ」はあなたの観光を有意義なものにしてくれます！
     </h2>
 
-    <%= link_to "さくれのめんばーになる", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "アカウントを作成する", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
   
