--- a/web_rails/myapp/app/views/layouts/pdf.html.erb
+++ b/web_rails/myapp/app/views/layouts/pdf.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<%= stylesheet_link_tag wicked_pdf_asset_base64('application.pdf') -%>
 </head>
 <body>
 <%= yield %>
