[Change]　サイト全体のレイアウト初期状態に変更

--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer" style="background-color:#CC9966;">
+<footer class="footer">
   <%= link_to image_tag("icon/さくれアイコン3.png", :size => "50x50", class: "img-responsive center-block"), root_path %>
     <nav>
       <%= link_to "企業向け申し込みフォーム", offer_path %></li>
