--- a/web_rails/myapp/app/views/layouts/application.html.erb
+++ b/web_rails/myapp/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-  <body style="background-color:#FFFFCC;">
+  <body>
     <%= render 'layouts/header' %>
-    <div class="container" style="background-color:#FFEFD5;">
+    <div class="container">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
