[Change] 細かいデザイン修正

--- a/web_rails/myapp/app/views/spot/create_s.html.erb
+++ b/web_rails/myapp/app/views/spot/create_s.html.erb
@@ -30,7 +30,7 @@
       </tr>
       <tr>
         <th>都道府県<span class="text-danger">（必須）</span></th>
-        <td><%= f.collection_select(:prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: "選択してください", class: 'form-control'}) %></td>
+        <td><%= f.collection_select(:prefecture_code, JpPrefecture::Prefecture.all, :code, :name, {prompt: "選択してください"}, class: 'form-control') %></td>
       </tr>
       <tr>
         <th>市<span class="text-danger">（必須）</span></th>
