--- a/web_rails/myapp/app/views/users/show.html.erb
+++ b/web_rails/myapp/app/views/users/show.html.erb
@@ -11,8 +11,8 @@
               </td>
             </tr>
           <% end %>
-          <tr><td><%= @user.user_name %></td></tr>
-          <tr><td><%= @user.email %></td></tr>
+          <tr><th>Name</th><td><%= @user.user_name %></td></tr>
+          <tr><th>Address</th><td><%= @user.email %></td></tr>
         </table>
       </h1>
     </section>
