[Change] サイトレイアウト変更

--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <% if logged_in? %>
   <div class="">
   <%= render('search/search') %>
+  <hr><p class="center">タイムライン</p>
   <%= render('search/time_line') %>
 <% else %>
   <div class="py-4">
