--- a/web_rails/myapp/app/views/layouts/_footer.html.erb
+++ b/web_rails/myapp/app/views/layouts/_footer.html.erb
@@ -1,6 +1,8 @@
 <footer class="footer">
-  <%= link_to image_tag("icon/さくれアイコン3.png", :size => "50x50", class: "img-responsive center-block"), root_path %>
-    <nav>
-      <%= link_to "企業向け申し込みフォーム", offer_path %></li>
+    <nav class="text-center">
+      <%= link_to "企業向け申し込みフォーム", offer_path %>&nbsp;&nbsp;
+      <%= link_to "About",'#' %>&nbsp;&nbsp;
+      <%= link_to "利用規約",'#' %>
     </nav>
+    <%= link_to image_tag("icon/さくれアイコン3.png", :size => "50x50", class: "img-responsive center-block"), root_path %>
 </footer>
