[change]計画表参照レイアウト変更

--- a/web_rails/myapp/app/assets/stylesheets/planning.scss
+++ b/web_rails/myapp/app/assets/stylesheets/planning.scss
@@ -202,3 +202,11 @@
 		margin: -55px 5px 0 0px;
 	}	
 }
+
+/*-----------------------------------------
+	show.html
+*/
+.table-responsive{
+	font-size: 1.2em;
+	text-align: center;
+}
