[Change] creative.min.js 読みづらかった

--- a/web_rails/myapp/app/assets/stylesheets/planning.scss
+++ b/web_rails/myapp/app/assets/stylesheets/planning.scss
@@ -113,7 +113,7 @@
 	width: 40px;
 	height: 40px;
 	font-family: 'ecoico';
-	speak: none;
+	//speak: none;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
