--- a/web_rails/myapp/app/views/planning/show.html.erb
+++ b/web_rails/myapp/app/views/planning/show.html.erb
@@ -1,35 +1,41 @@
 <% provide(:title, '計画表一覧') %>
-<div class="table-responsive">
-  <% @plan = Plan.where(user_id: session[:user_id]) %>
-  <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th class="col-sm-5">計画表名</th>
-        <th class="col-sm-5">作成日</th>
-        <th class="col-sm-2">ダウンロード・削除</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @plan.each do |pa| %>
-    <tr>
-      <td>
-        <%= link_to plan_detail_path(plan_id: pa.plan_id) do %>
-          <%= pa.plan_name %>
-        <% end %>
-      </td>
-      <td>
-        <%= pa.created_at.strftime("%Y/%m/%d %H:%M") %>
-      </td>
-      <td>
-        <%= link_to plan_detail_path(format: :pdf, plan_id: pa.plan_id) , class:"btn btn-link btn-lg" do %>
-          <i class="glyphicon glyphicon-save"></i>
-        <% end %>
-        <%= link_to plan_destroy_path(id: pa.id), method: :delete , class:"btn btn-link btn-lg" do %>
-          <i class="glyphicon glyphicon-trash"></i>
-        <% end %>
-      </td>
-    </tr>
-    <% end %>
-    </tbody>
-  </table>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <div class="table-responsive">
+        <% @plan = Plan.where(user_id: session[:user_id]) %>
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th class="col-sm-5">計画表名</th>
+              <th class="col-sm-5">作成日</th>
+              <th class="col-sm-2">ダウンロード・削除</th>
+            </tr>
+          </thead>
+          <tbody>
+          <% @plan.each do |pa| %>
+          <tr>
+            <td>
+              <%= link_to plan_detail_path(plan_id: pa.plan_id) do %>
+                <%= pa.plan_name %>
+              <% end %>
+            </td>
+            <td>
+              <%= pa.created_at.strftime("%Y/%m/%d %H:%M") %>
+            </td>
+            <td>
+              <%= link_to plan_detail_path(format: :pdf, plan_id: pa.plan_id) , class:"btn btn-link btn-lg" do %>
+                <i class="glyphicon glyphicon-save"></i>
+              <% end %>
+              <%= link_to plan_destroy_path(id: pa.id), method: :delete , class:"btn btn-link btn-lg" do %>
+                <i class="glyphicon glyphicon-trash"></i>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </aside>
 </div>
