--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -8,7 +8,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row">作品名：</th>
+                    <th scope="row" width="20%">作品名：</th>
                     <td><%= @detail[0].product_name %></td>
                 </tr>
                 <tr>
